<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">

    <View
        android:id="@+id/question_color"
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:background="@color/colorSub" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/Question_TitlLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/Question_New"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="40dp"
                android:src="@drawable/newtag" />

            <TextView
                android:id="@+id/Question_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/Question_New"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="Title"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/Question_Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Question_TitlLayout"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Content"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Question_Content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/echoUp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:maxHeight="20dp"
                android:paddingStart="10dp"
                android:src="@drawable/ic_thumb_up_black_24dp"
                android:tint="@color/colorSub" />

            <ImageView
                android:id="@+id/echoDown"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:maxHeight="20dp"
                android:paddingStart="10dp"
                android:src="@drawable/ic_thumb_down_black_24dp"
                android:tint="@color/colorSub" />

            <TextView
                android:id="@+id/echo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="0"
                android:textSize="@dimen/textSize" />

            <ImageView
                android:id="@+id/reply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:maxHeight="20dp"
                android:src="@drawable/reply"
                android:tint="@color/colorSub" />

            <TextView
                android:id="@+id/replyCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="0"
                android:textSize="@dimen/textSize" />

            <ImageView
                android:id="@+id/Set_Fixed"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:maxHeight="20dp"
                android:src="@drawable/ic_arrow_upward"
                android:tint="@color/colorSub"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/Cancel_Fixed"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:maxHeight="20dp"
                android:src="@drawable/ic_arrow_downward"
                android:tint="@color/colorSub"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/Delete_Post"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:maxHeight="20dp"
                android:src="@drawable/ic_delete"
                android:tint="@color/colorSub"
                android:visibility="gone" />

            <TextView
                android:id="@+id/date_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="Date"
                android:textAlignment="gravity"
                android:textSize="@dimen/textSize" />
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>