<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_roomlist"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/list"
            android:title="Room" />
        <item
            android:id="@+id/menu_favourite"
            android:checkable="true"
            android:checked="false"
            android:icon="@drawable/star"
            android:title="Favourite" />
        <item
            android:id="@+id/menu_option"
            android:checkable="true"
            android:checked="false"
            android:icon="@drawable/setting"
            android:title="Setting" />
        <item
            android:id="@+id/menu_login"
            android:checkable="true"
            android:checked="false"
            android:icon="@drawable/admin"
            android:title="Admin" />
    </group>
</menu>